--- a/Tom Decroos.ipynb
+++ b/Tom Decroos.ipynb
@@ -38,7 +38,7 @@
     "## Publications\n",
     "\n",
     "#### 2019\n",
-    "- Actions Speak Louder Than Goals: Valuing Player Actions in Soccer. _Tom Decroos, Lotte Bransen, Jan Van Haaren, Jesse Davis._ **KDD 2019**. [[paper pdf](reports/kdd19_tomd.pdf)]\n",
+    "- Actions Speak Louder Than Goals: Valuing Player Actions in Soccer. _Tom Decroos, Lotte Bransen, Jan Van Haaren, Jesse Davis._ **KDD 2019 (Best Applied Data Science  Paper)**. [[paper pdf](reports/kdd19_tomd.pdf)] {[slides pdf](reports/kdd2019_tomd_slides.pdf)] [[youtube video](https://www.youtube.com/watch?v=S_WJwqfVNis])]\n",
     "- Player Vectors: Characterizing Soccer Players' Playing Style from Match Event Streams. _Tom Decroos, Jesse Davis._ **ECML/PKDD 2019**. [[paper_pdf](reports/ecml19_tomd.pdf)]\n",
     "- Analyzing Soccer Players’ Skill Ratings Over Time Using Tensor-Based Methods. _Kenneth Verstraete, Tom Decroos, Bruno Coussement, Nick Vannieuwenhoven, Jesse Davis._ Machine Learning and Data Mining for Sports Analytics ECML/PKDD 2018 workshop.\n",
     "[[paper pdf](reports/mlsa19-verstraete.pdf)]\n",
@@ -84,10 +84,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Software\n",
+    "I am the author of two soccer-related pip packages:\n",
+    "- `socceraction` [[https://github.com/ML-KULeuven/socceraction](https://github.com/ML-KULeuven/socceraction)]: Convert soccer event stream data from commercial vendors (e.g., Opta, Wyscout, StatsBomb) to actions in the simpler SPADL language and value the actions using the VAEP framework.\n",
+    "- `matplotsoccer` [[https://github.com/TomDecroos/matplotsoccer](https://github.com/TomDecroos/matplotsoccer)]: Visualize soccer event stream data and common figures such as heatmaps over a soccer field."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Awards\n",
-    "* Personal PhD scholarship (aspirant) from FWO Flanders from October 2017 until September 2021.\n",
-    "* AAAI-17 Student Travel Scholarship by AAAI in December 2016.\n",
-    "* KDD-19 Student Travel Scholarship by KDD in June 2019."
+    "* AAAI-17 Student Travel Award by AAAI in December 2016.\n",
+    "* **Personal 4-year PhD scholarship** (aspirant) from FWO Flanders from October 2017 until September 2021.\n",
+    "* KDD-19 Student Travel Award by KDD in June 2019.\n",
+    "* **KDD-19 Best Paper in the Applied Data Science Track** (out of >700 submitted papers)"
    ]
   },
   {
@@ -155,14 +166,14 @@
     "**Office**  \n",
     "200A.02.144\n",
     "\n",
-    "You can also reach me via my [KU Leuven profile](https://www.kuleuven.be/wieiswie/en/person/00085417) and my [LinkedIn](https://www.linkedin.com/in/tom-decroos-97488980/)."
+    "You can also reach me via my [KU Leuven profile](https://www.kuleuven.be/wieiswie/en/person/00085417), [LinkedIn](https://www.linkedin.com/in/tom-decroos-97488980/) or [Twitter](https://twitter.com/TomDecroos)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_Last update: 29/07/2019_"
+    "_Last update: 06/08/2019_"
    ]
   },
   {
@@ -197,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
