--- a/Tom Decroos.ipynb
+++ b/Tom Decroos.ipynb
@@ -26,9 +26,9 @@
    "metadata": {},
    "source": [
     "## About me\n",
-    "I am a 3rd year PhD student in the DTAI Research group at KU Leuven working with Prof. [Jesse Davis](https://people.cs.kuleuven.be/~jesse.davis/).\n",
+    "I am a 4th year PhD student in the DTAI Research group at KU Leuven working with Prof. [Jesse Davis](https://people.cs.kuleuven.be/~jesse.davis/).\n",
     "\n",
-    "My research interests lie in _learning_ from complex data streams (both predictive and descriptive analytics), with a focus on soccer analytics."
+    "I research how to _learn_ from complex data streams (using both predictive and descriptive machine learning methods) with a focus on soccer analytics."
    ]
   },
   {
@@ -38,8 +38,8 @@
     "## Publications\n",
     "\n",
     "#### 2019\n",
-    "- Actions Speak Louder Than Goals: Valuing Player Actions in Soccer. _Tom Decroos, Lotte Bransen, Jan Van Haaren, Jesse Davis._ **KDD 2019 (Best Applied Data Science  Paper)**. [[paper pdf](reports/kdd19_tomd.pdf)] {[slides pdf](reports/kdd2019_tomd_slides.pdf)] [[youtube video](https://www.youtube.com/watch?v=S_WJwqfVNis])]\n",
-    "- Player Vectors: Characterizing Soccer Players' Playing Style from Match Event Streams. _Tom Decroos, Jesse Davis._ **ECML/PKDD 2019**. [[paper_pdf](reports/ecml19_tomd.pdf)]\n",
+    "- Actions Speak Louder Than Goals: Valuing Player Actions in Soccer. _Tom Decroos, Lotte Bransen, Jan Van Haaren, Jesse Davis._ **KDD 2019 (Best Applied Data Science  Paper)**. [[paper pdf](reports/kdd19_tomd.pdf)] [[slides pdf](reports/kdd2019_tomd_slides.pdf)] [[youtube video](https://www.youtube.com/watch?v=S_WJwqfVNis])]\n",
+    "- Player Vectors: Characterizing Soccer Players' Playing Style from Match Event Streams. _Tom Decroos, Jesse Davis._ **ECML/PKDD 2019**. [[paper_pdf](reports/ecml19_tomd.pdf)] [[slides_pdf](reports/playing-style-wide-v2.pdf)]\n",
     "- Analyzing Soccer Players’ Skill Ratings Over Time Using Tensor-Based Methods. _Kenneth Verstraete, Tom Decroos, Bruno Coussement, Nick Vannieuwenhoven, Jesse Davis._ Machine Learning and Data Mining for Sports Analytics ECML/PKDD 2018 workshop.\n",
     "[[paper pdf](reports/mlsa19-verstraete.pdf)]\n",
     "\n",
@@ -105,6 +105,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Media\n",
+    "Our work on valuing actions in soccer appeared in numerous newspapers and media outlets:\n",
+    "- https://nieuws.kuleuven.be/en/content/2019/messi-v-ronaldo-whos-the-goat-new-computer-model-may-help-to-settle-the-debate\n",
+    "- https://sporza.be/nl/2019/08/20/belgisch-onderzoek-is-messi-beter-dan-ronaldo/\n",
+    "- https://www.mirror.co.uk/sport/football/news/supercomputer-determines-who-better-between-18969139\n",
+    "- https://www.dailystar.co.uk/sport/football/lionel-messi-vs-cristiano-ronaldo-18974258\n",
+    "- https://en.as.com/en/2019/08/21/football/1566373116_436669.html\n",
+    "- https://www.foxsportsasia.com/football/1160608/supercomputer-shows-who-is-better-between-cristiano-ronaldo-and-lionel-messi/\n",
+    "- https://innovationorigins.com/research-by-ku-leuven-brings-proof-messi-is-better-than-ronaldo/\n",
+    "- ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Community service\n",
     "\n",
     "#### Reviewing\n",
@@ -129,6 +145,8 @@
    "source": [
     "## Didactical tasks\n",
     "I am/was a teaching assistant for the following courses:\n",
+    "- Declarative languages (2019-2020)\n",
+    "- Data structures and algorithms (2019-2020)\n",
     "- Declarative languages (2018-2019)\n",
     "- Data structures and algorithms (2018-2019)\n",
     "- Declarative languages (2017-2018)\n",
@@ -137,6 +155,9 @@
     "- Data structures and algorithms (2016-2017)\n",
     "    \n",
     "I am/was a daily master's thesis advisor for the following students:\n",
+    "- Jasper Maes (2019-2020)\n",
+    "- Tomas Geens (2019-2020)\n",
+    "- James Defauw (2019-2020)\n",
     "- Tim Hofmans (2018-2019)\n",
     "- Nick Schouten (2018-2019)\n",
     "- Kenneth Verstraete (2017-2018)\n",
@@ -173,7 +194,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_Last update: 06/08/2019_"
+    "_Last update: 26/09/2019_"
    ]
   },
   {
@@ -186,7 +207,6 @@
     "  window.dataLayer = window.dataLayer || [];\n",
     "  function gtag(){dataLayer.push(arguments);}\n",
     "  gtag('js', new Date());\n",
-    "\n",
     "  gtag('config', 'UA-131168904-1');\n",
     "</script>"
    ]
@@ -208,7 +228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
